# Game-AI-Library

./: CMakeLists.txt  README.md  main.cpp
game_ai_library/: FiniteStateMachine.cpp  FiniteStateMachine.h
game_ai_library/example/: fsm  fsm.cpp  makefile
game_ai_library/machine_learning/: README.md
game_ai_library/machine_learning/cnn/: CMakeLists.txt  ConvLayer.cpp  ConvLayer.h  Filter.h  Galdef.h  Image.cpp  Image.h  Layer.cpp  Layer.h  NeuralNetwork.cpp  NeuralNetwork.h  TrainData.cpp  TrainData.h  VggNet.cpp  VggNet.h
game_ai_library/machine_learning/util/: reader.cpp
